# minesweeper

./: .editorconfig  .gitignore  README.md  quick-start.sh  skaffold.yaml  todo
.github/workflows/: angular-frontend-docker-publish.yml  backend-docker-publish.yml  codeql.yml  docker-image-frontend.yml  docker-image.yml  docker-publish.yml  frontend-docker-publish.yml
.googlecloud/cloud-build/: backend-build.yaml  backend-dotnet-build.yaml  frontend-angular-build.yaml  frontend-build.yaml  frontend-dotnet-build.yaml
src/backend/: Dockerfile  IGameRepository.cs  MinesweeperGame.cs  Startup.cs  skaffold.yaml
src/backend/rust/: .dockerignore  Cargo.toml  Dockerfile  skaffold.yaml
src/backend/rust/kubernetes-manifests/: kustomization.yaml  mongodb.deployment.yaml  mongodb.service.yaml  rust-backend.deployment.yaml  rust-backend.service.yaml
src/backend/rust/src/: error.rs  lib.rs  main.rs  settings.rs  startup.rs
src/backend/rust/src/api/: auth.rs  game.rs  mod.rs  user.rs
src/backend/rust/src/auth/: client.rs  identity.rs  mod.rs
src/backend/rust/src/engine/: mod.rs
src/backend/rust/src/model/: board.rs  dto.rs  game.rs  mod.rs  user.rs
src/backend/rust/src/repository/: memory.rs  mod.rs  mongo.rs
src/backend/rust/src/service/: game.rs  mod.rs
src/backend/rust/src/telemetry/: metrics.rs  mod.rs
src/backend/rust/tests/: api_integration.rs
src/backend/rust/tests/common/: mod.rs
src/frontend/: Dockerfile  Startup.cs  frontend.csproj  skaffold.yaml
src/monitoring/: skaffold.yaml
tests/performance/: create-game.lua  game-scenarios.lua  (+1 more)
(+164 files in other folders)
