[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]

actix-web = "4"

actix-cors = "0.7"

serde = { version = "1.0", features = ["derive"] }

serde_repr = "0.1"

serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

rand = "0.8"

mongodb = "2.8"

async-trait = "0.1"

futures-util = "0.3"

env_logger = "0.10"

log = "0.4"

tokio = { version = "1", features = ["full"] }

opentelemetry = { version = "0.21", features = ["metrics", "trace", "logs"] }

opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "metrics", "trace", "logs"] }

opentelemetry-otlp = { version = "0.14", features = ["metrics", "trace", "logs", "grpc-tonic"] }

opentelemetry-appender-tracing = "0.2"

tracing = { version = "0.1", features = ["attributes"] }

tracing-opentelemetry = "0.22"

tracing-log = "0.2"

tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }

actix-web-opentelemetry = "0.16"

tonic = "0.10"

openidconnect = "3.4"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-identity = "0.7"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
dotenvy = "0.15"
derive_more = { version = "1.0", features = ["display"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
config = "0.13"

[dev-dependencies]
testcontainers = "0.15"
once_cell = "1.18"
actix-http = "3"
